Add image thumbnails to listing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
 
-    <link href="dist/css/style.css?rev=94d4a7d2dccb635e0925c3d84e5fd4c8" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=aecb81be1f6a1d6d849630580a0e34f8" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
@@ -92,7 +92,7 @@
             <ul class="no-list">
               <li>
                 <a href="/neto" title="Read Neto Ecommerce case study">
-                  <!--<figure><img src="images/thumb-neto.jpg" alt=""></figure>-->
+                  <figure><img src="images/thumb-neto.jpg" alt=""></figure>
                   <div>
                     <h3>Neto Ecommerce</h3> 
                     <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
@@ -102,7 +102,7 @@
               </li> 
               <li>
                 <a href="https://www.qut.edu.au/" title="Visit QUT Student Directory">
-                  <!--<figure><img src="images/thumb-qut-course.jpg" alt=""></figure>-->
+                  <figure><img src="images/thumb-qut-course.jpg" alt=""></figure>
                   <div>
                     <h3>Queensland University of Technology</h3> 
                     <p>Re-development of the university's Student Directory and <span>HiQ website</span>.</p>
@@ -112,7 +112,7 @@
               </li>              
               <li>
                 <a href="/halfbrick" title="Read Halfbrick case study">
-                  <!--<figure><img src="images/thumb-halfbrick-homepage.jpg" alt=""></figure>-->
+                  <figure><img src="images/thumb-halfbrick.jpg" alt=""></figure>
                   <div>                  
                     <h3>Halfbrick Studios</h3> 
                     <p>Websites &amp; online marketing for over a million visitors <span>per month.</span></p>
@@ -122,7 +122,7 @@
               </li>
               <li>
                 <a href="/fruit-ninja" title="Read Fruit Ninja case study">
-                  <!--<figure><img src="images/thumb-fruit-ninja-homepage.jpg" alt=""></figure>-->
+                  <figure><img src="images/thumb-fruit-ninja-homepage.jpg" alt=""></figure>
                   <div>
                     <h3>Fruit Ninja</h3> 
                     <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
@@ -132,7 +132,7 @@
               </li>
               <li>
                 <a href="https://thesteepery.com.au" title="Visit The Steepery website">
-                  <!--<figure><img src="images/thumb-the-steepery.jpg" alt=""></figure>-->
+                  <figure><img src="images/thumb-the-steepery.jpg" alt=""></figure>
                   <div>
                     <h3>The Steepery</h3> 
                     <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
@@ -182,10 +182,10 @@
             <h2><span>Web skill list</span></h2>
             <ul class="no-list skills">
               <li><strong>HTML5/CSS3</strong> &middot; SASS, BEM, Gulp, WCAG</li>
-              <li><strong>JavaScript</strong> &middot; Vue, React, AngularJS</li>
+              <li><strong>JavaScript</strong> &middot; ES6, Vue, React</li>
               <li><strong>Design</strong> &middot; Sketch, Photoshop, Illustrator</li>
               <li><strong>PHP</strong> &middot; Craft CMS, WordPress, Laravel</li>
-              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS</li>
+              <li><strong>Server-side</strong> &middot; Node, Nginx/Apache, AWS</li>
               <li><strong>Ecommerce</strong> &middot; Shopify, Neto, Amazon</li>
               <li><strong>Web Graphics</strong> &middot; SVG, Canvas</li>
               <li><strong>Version control</strong> &middot; GIT, Perforce</li>
