Add Teach Starter

--- a/index.html
+++ b/index.html
@@ -91,8 +91,18 @@
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
+                <a href="https://www.teachstarter.com" title="Visit the Teach Starter website">
+                  <figure><img src="images/thumb-teachstarter.jpg" alt="Teach Starter website"></figure>
+                  <div>
+                    <h3>Teach Starter</h3> 
+                    <p>Building online products for teachers to use in their classrooms.</p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
+                </a>
+              </li> 
+              <li>
                 <a href="/neto" title="Read Neto Ecommerce case study">
-                  <figure><img src="images/thumb-neto.jpg" alt=""></figure>
+                  <figure><img src="images/thumb-neto.jpg" alt="Neto homepage"></figure>
                   <div>
                     <h3>Neto Ecommerce</h3> 
                     <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
@@ -102,7 +112,7 @@
               </li> 
               <li>
                 <a href="https://www.qut.edu.au/" title="Visit QUT Student Directory">
-                  <figure><img src="images/thumb-qut-course.jpg" alt=""></figure>
+                  <figure><img src="images/thumb-qut-course.jpg" alt="QUT Student site"></figure>
                   <div>
                     <h3>Queensland University of Technology</h3> 
                     <p>Re-development of the university's Student Directory and <span>HiQ website</span>.</p>
@@ -112,7 +122,7 @@
               </li>              
               <li>
                 <a href="/halfbrick" title="Read Halfbrick case study">
-                  <figure><img src="images/thumb-halfbrick.jpg" alt=""></figure>
+                  <figure><img src="images/thumb-halfbrick.jpg" alt="Halfbrick website"></figure>
                   <div>                  
                     <h3>Halfbrick Studios</h3> 
                     <p>Websites &amp; online marketing for over a million visitors <span>per month.</span></p>
@@ -122,7 +132,7 @@
               </li>
               <li>
                 <a href="/fruit-ninja" title="Read Fruit Ninja case study">
-                  <figure><img src="images/thumb-fruit-ninja-homepage.jpg" alt=""></figure>
+                  <figure><img src="images/thumb-fruit-ninja-homepage.jpg" alt="Fruit Ninja homepage"></figure>
                   <div>
                     <h3>Fruit Ninja</h3> 
                     <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
@@ -132,7 +142,7 @@
               </li>
               <li>
                 <a href="https://thesteepery.com.au" title="Visit The Steepery website">
-                  <figure><img src="images/thumb-the-steepery.jpg" alt=""></figure>
+                  <figure><img src="images/thumb-the-steepery.jpg" alt="The Steepery online store"></figure>
                   <div>
                     <h3>The Steepery</h3> 
                     <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
@@ -211,7 +221,7 @@
           Like what you see? Let's work together<span>.</span>
         </a>
 
-        <footer id="footer">&copy; 2019 Sean Ockert. And all that jazz</footer>  
+        <footer id="footer">&copy; 2020 Sean Ockert. And all that jazz</footer>  
         </div>
       </div>
     
