Add Assess, update copy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
 
-    <link href="dist/css/style.css?rev=42e17d310cb0066e848146bf6caf600e" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=67b162b723daaa3ec1db0699426f6385" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
@@ -83,19 +83,29 @@
           <div class="inner">
             <div class="column" id="projects">
             <header class="intro">
-              <h4>Greetings from the front line!</h4> 
-              <p>I'm Sean, a front-end developer with a ten years of championing usability, clarity and performance. Success is a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
-              <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch &rarr;</a></p>
+              <h4>Greetings from the front end!</h4> 
+              <p>I'm Sean, web developer extraordinaire from sunny Brisbane. I champion usability, clarity, and performance. Success is happy clients and, a great <span>user experience.</span></p>
+              <p>Why not <a href="mailto:hello@seanockert.com" title="Email Sean">recruit a web veteran</a> for your <span>next project?</span></p>
             </header>
             
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
+                <a href="https://www.teachstarter.com/assess" title="Visit the Teach Starter Assess landing page">
+                  <figure><img src="images/thumb-assess.jpg" alt="Teach Starter Assess product"></figure>
+                  <div>
+                    <h3>Assess</h3> 
+                    <p>Online assessment creator and learning tool. Built VueJS app, user interface, pattern library, copy, and REST API endpoints.</p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
+                </a>
+              </li> 
+              <li>
                 <a href="https://www.teachstarter.com" title="Visit the Teach Starter website">
                   <figure><img src="images/thumb-teachstarter.jpg" alt="Teach Starter website"></figure>
                   <div>
                     <h3>Teach Starter</h3> 
-                    <p>Building online products for teachers to use in their classrooms.</p>
+                    <p>SaaS website management and design. Building online products for teachers to use in their classrooms.</p>
                     <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                   </div>
                 </a>
@@ -177,13 +187,6 @@
                   <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li> 
-              <li>
-                <a href="https://so-card-sort.surge.sh/" title="View Card Sort">
-                  <h3>Card Sort</h3> 
-                  <p>A Trello-like board, for lists or card-sorting exercises. Built <span>with Vue.</span></p>
-                  <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
-                </a>
-              </li>
             </ul>
           </div>
           <div class="clear"></div>
