Update link to Assess

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 
     <link href="dist/css/style.css?rev=123db792628cac984ea54a98b0a04e73" rel="stylesheet" type="text/css">
 
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
-    <![endif]-->
-
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
     <!-- Facebook Open Graph -->
@@ -84,14 +79,14 @@
             <div class="column" id="projects">
             <header class="intro">
               <h4>Greetings from the front end!</h4> 
-              <p>I'm Sean, web developer extraordinaire from sunny Brisbane. I champion usability, clarity, and performance. Success is happy clients and, a great <span>user experience.</span></p>
+              <p>I'm Sean, professional web developer from sunny Brisbane. I champion usability, clarity, and performance. Success is happy clients, a product-market fit, and a great <span>user experience.</span></p>
               <p>Why not <a href="mailto:hello@seanockert.com" title="Email Sean">recruit a web veteran</a> for your <span>next project?</span></p>
             </header>
             
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
-                <a href="https://www.teachstarter.com/assess" title="Visit the Teach Starter Assess landing page">
+                <a href="images/assess-landing-page.png" title="View the Teach Starter Assess landing page">
                   <figure><img src="images/thumb-assess.jpg" alt="Teach Starter Assess product"></figure>
                   <div>
                     <h3>Assess</h3> 
