--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
 
-    <link href="dist/css/style.css?rev=123db792628cac984ea54a98b0a04e73" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=998" rel="stylesheet" type="text/css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
@@ -63,10 +63,10 @@
                 <div class="contacts">
                   <h3><a href="mailto:hello@seanockert.com" title="Get in touch">hello@seanockert.com</a></h3>
                   <ul class="nolist ">
-                    <li><a href="https://twitter.com/seanockert" title="Follow Sean on Twitter">Twitter</a></li>
-                    <li class="hidden-small"><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
-                    <li><a href="https://github.com/seanockert" title="View Sean's GitHub profile">GitHub</a></li>
-                    <li><a href="sean-ockert-resume-2019.pdf" title="Download Sean's resume" class="no-barba">Resume</a></li>
+                    <li class="hidden-small"><a href="https://twitter.com/seanockert" title="Follow Sean on Twitter">Twitter</a></li>
+                    <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
+                    <li><a href="https://github.com/seanockert" title="View Sean's GitHub repos">GitHub</a></li>
+                    <li><a href="sean-ockert-resume-2021.pdf" title="Download Sean's resume" class="no-barba">Resume</a></li>
                   </ul>
                 </div>
               </div>
@@ -78,20 +78,20 @@
           <div class="inner">
             <div class="column" id="projects">
             <header class="intro">
-              <h4>Greetings from the front end!</h4> 
-              <p>I'm Sean, professional web developer from sunny Brisbane. I champion usability, clarity, and performance. Success is happy clients, a product-market fit, and a great <span>user experience.</span></p>
+              <h4>Hi! You're looking good today.</h4> 
+              <p>I'm Sean, a professional web developer from sunny Brisbane. I champion usability, clarity, and performance. Success is happy clients, a product-market fit, and a great <span>user experience.</span></p>
               <p>Why not <a href="mailto:hello@seanockert.com" title="Email Sean">recruit a web veteran</a> for your <span>next project?</span></p>
             </header>
             
-            <h2><span>Recent work</span></h2>
+            <h2><span>Selected work</span></h2>
             <ul class="no-list">
               <li>
                 <a href="images/assess-landing-page.png" title="View the Teach Starter Assess landing page">
                   <figure><img src="images/thumb-assess.jpg" alt="Teach Starter Assess product"></figure>
                   <div>
                     <h3>Assess</h3> 
-                    <p>Online assessment creator and learning tool. Built VueJS app, user interface, pattern library, copy, and REST API endpoints.</p>
-                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                    <p>Online assessment builder and learning tool. Lead developer for VueJS web app, user interface, pattern library, copywriting, REST API endpoints, and data schemas.</p>
+                    <div class="link">Read more &rarr;</div>
                   </div>
                 </a>
               </li> 
@@ -170,11 +170,19 @@
             <h2><span>Side projects</span></h2>
             <ul class="no-list">
               <li>
+                <a href="https://mycorona.surge.sh/" title="View Covid-19 Stats dashboard">
+                  <h3>Covid-19 Stats</h3> 
+                  <p>A dashboard for viewing coronavirus cases around the world. Filter and compare countries.</p>
+                  <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                </a>
+              </li>
+              <li>
                 <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project">
                   <h3>Email Content Generator</h3> 
                   <p>Construct emails from pre-witten content. Internal tool for <span>Neto staff.</span></p>
                   <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
+              </li>
               <li>
                 <a href="https://so-tinysums.surge.sh/" title="View TinySums project">
                   <h3>Tiny Sums</h3> 
@@ -189,15 +197,16 @@
           <div class="column" id="skills">
             <h2><span>Web skill list</span></h2>
             <ul class="no-list skills">
-              <li><strong>HTML5/CSS3</strong> &middot; SASS, BEM, Gulp, WCAG</li>
-              <li><strong>JavaScript</strong> &middot; ES6, Vue, React</li>
-              <li><strong>Design</strong> &middot; Sketch, Photoshop, Illustrator</li>
-              <li><strong>PHP</strong> &middot; Craft CMS, WordPress, Laravel</li>
-              <li><strong>Server-side</strong> &middot; Node, Nginx/Apache, AWS</li>
+              <li><strong>HTML/CSS</strong> &middot; SASS, BEM, Gulp, WCAG</li>
+              <li><strong>JavaScript</strong> &middot; ES6+, Vue, React, WebPack</li>
+              <li><strong>Design</strong> &middot; Sketch, Photoshop, Illustrator, Figma</li>
+              <li><strong>PHP</strong> &middot; CraftCMS, WordPress, Laravel</li>
+              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS, GCP, Kubernetes/Terraform</li>
               <li><strong>Ecommerce</strong> &middot; Shopify, Neto, Amazon</li>
               <li><strong>Web Graphics</strong> &middot; SVG, Canvas</li>
               <li><strong>Version control</strong> &middot; GIT, Perforce</li>
-              <li><strong>More</strong> &middot; CI tools, web analytics/testing, SEO</li>
+              <li><strong>Analytics</strong> &middot; Segment, Amplitude, Google suite (GA, GTM, Search Console, Optimize)</li>
+              <li><strong>More</strong> &middot; CI/CD tools (BuildKite, GitHub Actions), A/B testing, SEO</li>
             </ul>
           </div>
 
@@ -219,7 +228,7 @@
           Like what you see? Let's work together<span>.</span>
         </a>
 
-        <footer id="footer">&copy; 2020 Sean Ockert. And all that jazz</footer>  
+        <footer id="footer">&copy; 2021 Sean Ockert. And all that jazz</footer>  
         </div>
       </div>
     
