--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
                 <div class="contacts">
                   <h3><a href="mailto:hello@seanockert.com" title="Get in touch">hello@seanockert.com</a></h3>
                   <ul class="nolist ">
-                    <li class="hidden-small"><a href="https://twitter.com/seanockert" title="Follow Sean on Twitter">Twitter</a></li>
                     <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
                     <li><a href="https://github.com/seanockert" title="View Sean's GitHub repos">GitHub</a></li>
-                    <li><a href="sean-ockert-resume-2022.pdf" title="Download Sean's resume" class="no-barba">Resume</a></li>
+                    <li><a href="sean-ockert-resume-2022.pdf" title="Download Sean's resume" class="no-barba">View Resume</a></li>
                   </ul>
                 </div>
               </div>
