--- a/halfbrick/index.html
+++ b/halfbrick/index.html
@@ -8,7 +8,7 @@
     <title>Halfbrick Studios - Sean Ockert</title>
     <meta name="description" content="At Halfbrick, I was responsible for creating and running all of our public websites and online campaigns, seen by over 1 million visitors every month." />
     <link href="../images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="../dist/css/style.css?rev=afb0d2738e57d6a1dca39a7754e9a490" rel="stylesheet" type="text/css">
+    <link href="../dist/css/style.css?rev=8" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
