--- a/neto/index.html
+++ b/neto/index.html
@@ -8,7 +8,7 @@
     <title>Neto Ecommerce - Sean Ockert</title>
     <meta name="description" content="Neto ecommerce provides a SaaS platform for retailers selling online or in-store" />
     <link href="../images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="../dist/css/style.css?rev=afb0d2738e57d6a1dca39a7754e9a490" rel="stylesheet" type="text/css">
+    <link href="../dist/css/style.css?rev=8" rel="stylesheet" type="text/css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <script>
