--- a/fruit-ninja/index.html
+++ b/fruit-ninja/index.html
@@ -8,7 +8,7 @@
     <title>Fruit Ninja - Sean Ockert</title>
     <meta name="description" content="Fruit Ninja, by Halfbrick, is one of most well-known mobile games in the world. It has been played by more than 1 billion people" />
     <link href="../images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="../dist/css/style.css?rev=afb0d2738e57d6a1dca39a7754e9a490" rel="stylesheet" type="text/css">
+    <link href="../dist/css/style.css?rev=8" rel="stylesheet" type="text/css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <script>
