--- a/index.html
+++ b/index.html
@@ -183,16 +183,15 @@
           <div class="column" id="skills">
             <h2><span>Web skills</span></h2>
             <ul class="no-list skills">
-              <li><strong>HTML/CSS</strong> &middot; SASS, BEM, Gulp, WCAG</li>
-              <li><strong>JavaScript</strong> &middot; ES6+, Vue, React, WebPack</li>
-              <li><strong>Design</strong> &middot; Sketch, Photoshop, Illustrator, Figma</li>
-              <li><strong>PHP</strong> &middot; CraftCMS, WordPress, Laravel</li>
-              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS, Kubernetes</li>
-              <li><strong>Ecommerce</strong> &middot; Shopify, Neto, Amazon</li>
+              <li><strong>HTML &amp; CSS</strong> &middot; SASS, styled components, atomic design, SEO, WCAG accessibility</li>
+              <li><strong>JavaScript</strong> &middot; Vue, React, TypeScript, EsLint, Webpack, Vite</li>
+              <li><strong>Design</strong> &middot; Sketch, Figma, Photoshop, Illustrator</li>
+              <li><strong>Testing</strong> &middot; Jest, Cypress, A/B testing, CI/CD tools</li>
+              <li><strong>PHP</strong> &middot; Laravel, CraftCMS, WordPress</li>
+              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS</li>
+              <li><strong>Ecommerce</strong> &middot; Shopify, Amazon</li>
               <li><strong>Web Graphics</strong> &middot; SVG, Canvas</li>
-              <li><strong>Version control</strong> &middot; GIT, Perforce</li>
-              <li><strong>Analytics</strong> &middot; Segment, Amplitude, Google suite (GA, GTM, Search Console, Optimize)</li>
-              <li><strong>More</strong> &middot; CI/CD tools (BuildKite, GitHub Actions), A/B testing, SEO</li>
+              <li><strong>Analytics</strong> &middot; Segment, Amplitude, Google Analytics</li>
             </ul>
           </div>
 
