--- a/neto/index.html
+++ b/neto/index.html
@@ -58,11 +58,11 @@
 
             <figure>
               <a href="https://www.netohq.com" title="Visit the Neto website"><img src="../images/page/screen-neto-homepage.jpg" alt="Screenshot of the Neto homepage" height="768" width="1024"></a>
-            </figure> 
+            </figure>
 
             <p>I joined Neto in 2017 to take ownership of the Neto public website.</p>
 
-            <p>Along with building out our web capabilities, my role also encompassed:</p> 
+            <p>Along with building out our web capabilities, my role also encompassed:</p>
             <ul>
               <li>user acquisition</li>
               <li>marketing campaigns</li>
@@ -83,7 +83,7 @@
            <figure>
               <img src="../images/page/screen-neto-landing-page.jpg" alt="Example of a Neto landing page" height="543" width="990">
               <figcaption>A landing page hero section</figcaption>
-            </figure> 
+            </figure>
 
             <p>We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and every possible permutations they might have. From this, I built flexible templates and data structures using Craft’s matrix to accommodate different messaging and layouts.</p>
 
@@ -140,7 +140,7 @@
 
             <h4>Migration pain points</h4>
 
-            <p>There are delicate SEO issues in migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain without negatively impacting organic traffic on the existing domain.</p> 
+            <p>There are delicate SEO issues in migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain without negatively impacting organic traffic on the existing domain.</p>
 
             <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. blog posts), implementing the appropriate <em>hreflang</em> tags and measuring the impact. After a few weeks, we would then 301 redirect that section.</p>
 
@@ -176,9 +176,9 @@
               <li>Did not meet accessibility and coding standards</li>
             </ul>
 
-            <p>Though similar in some respects, the user intent differed between the directories.</p> 
+            <p>Though similar in some respects, the user intent differed between the directories.</p>
 
-            <h4>Third-party integrations with Neto</h4> 
+            <h4>Third-party integrations with Neto</h4>
 
             <p>For add-ons, we want to answer:</p>
             <ol>
@@ -189,9 +189,9 @@
             <figure>
               <img src="../images/page/screen-neto-add-ons-listing.jpg" alt="Screenshot of the Neto add-ons listing" height="380" width="1202">
               <figcaption>Add-ons listing</figcaption>
-            </figure> 
+            </figure>
 
-            <p>Showcasing our third-party integrations is most important for customers switching from another platform (eg. Shopify). It’s often a deal breaker if Neto cannot integrate with all the software that their previous platform integrated with. 
+            <p>Showcasing our third-party integrations is most important for customers switching from another platform (eg. Shopify). It’s often a deal breaker if Neto cannot integrate with all the software that their previous platform integrated with.
 
             <p>I audited the add-on content and rewrote most of the descriptions to focus more on each one’s benefits to a Neto user, rather than features and marketing spiel.
 
@@ -204,7 +204,7 @@
             <figure>
               <img src="../images/page/screen-neto-add-ons-quickview.jpg" alt="Screenshot of a Neto add-ons quick-view" height="677" width="959">
               <figcaption>Add-ons listing quick-view loads via AJAX in a modal</figcaption>
-            </figure> 
+            </figure>
 
 
             <h4>Need a Neto expert?</h4>
@@ -218,7 +218,7 @@
             <figure>
               <img src="../images/page/screen-neto-experts-filter.jpg" alt="Screenshot of a Neto experts listing filters" height="511" width="1210">
               <figcaption>Experts can be filtered by service, location or budget; and saved for later.</figcaption>
-            </figure> 
+            </figure>
 
             <p>This allows users to compose their query more naturally than with separated dropdown fields.</p>
 
@@ -244,7 +244,7 @@
             <figure>
               <img src="../images/page/screen-neto-pricing-plans.jpg" alt="Screenshot of the Neto pricing plans" height="715" width="1183">
               <figcaption>New pricing plans. <a href="https://www.netohq.com/pricing" title="Visit pricing page">Source</a></figcaption>
-            </figure> 
+            </figure>
 
             <p>Some improvements made to the <a href="https://www.netohq.com/pricing" title="Visit pricing page">new version</a> were:</p>
             <ul>
@@ -265,7 +265,7 @@
             </ul>
 
             <p>The sales team were also happier as they rely on this page often when talking to prospects.</p>
- 
+
 
             <h4>Calculate plan pricing</h4>
 
@@ -283,14 +283,14 @@
               <img src="../images/page/screen-neto-calculator-2.jpg" alt="Screenshot of a Neto pricing calculator on mobile 2" height="750" width="1250">
               <img src="../images/page/screen-neto-calculator-3.jpg" alt="Screenshot of a Neto pricing calculator on mobile 3" height="750" width="1250">
               <figcaption>Pricing calculator on mobile</figcaption>
-            </figure> 
+            </figure>
 
            <!-- <figure class="inline">
               <img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">
               <figcaption>New pricing plans</figcaption>
             </figure> -->
 
-            <p><!--<img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">--> The calculator was built quickly using VueJS. The reactive data-binding allowed the price estimate to change immediately based on their selection.</p> 
+            <p><!--<img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">--> The calculator was built quickly using VueJS. The reactive data-binding allowed the price estimate to change immediately based on their selection.</p>
 
             <p>I planned to take this further so users could estimate their setup and store design costs, but we can’t accurately quantify these prices yet. However, the calculator is flexible to allow this in future. It also supports multiple currencies and tax rates, for New Zealand users.</p>
 
@@ -299,13 +299,13 @@
             <figure>
               <img src="../images/page/screen-neto-case-study-listing.jpg" alt="Case studies" height="467" width="803">
               <figcaption>Case studies</figcaption>
-            </figure> 
+            </figure>
 
             <figure class="img-two">
               <img src="../images/page/screen-neto-xl.jpg" alt="XL plan microsite on mobile" height="668" width="377">
               <img src="../images/page/screen-neto-manage.jpg" alt="XL plan microsite on mobile" height="668" width="377">
               <figcaption>XL page and Manage overview on mobile</figcaption>
-            </figure> 
+            </figure>
 
           </div>
         </article>
@@ -316,8 +316,7 @@
             Like what you see? Let's work together<span>.</span></a>
           </h4>
           <ul class="nolist">
-            <li><a href="https://twitter.com/seanockert" title="Follow me on Twitter">Twitter</a></li>
-            <li class="hidden-small"><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with me on LinkedIn">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with me on LinkedIn">LinkedIn</a></li>
             <li><a href="https://github.com/seanockert" title="View my GitHub profile">GitHub</a></li>
             <li><a href="../sean-ockert-resume-2022.pdf" title="Download my resume" class="no-barba">Resume</a></li>
           </ul>
@@ -326,7 +325,7 @@
       </div>
     </div></div> <!-- End barba -->
     <script src="../dist/js/scripts.min.js" defer></script>
-    
+
   </body>
 </html>
 
