--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <ul class="nolist ">
                     <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
                     <li><a href="https://github.com/seanockert" title="View Sean's GitHub repos">GitHub</a></li>
-                    <li><a href="sean-ockert-resume-2022.pdf" title="Download Sean's resume" class="no-barba">View Resume</a></li>
+                    <li><a href="sean-ockert-resume-2023.pdf" title="Download Sean's resume" class="no-barba">View Resume</a></li>
                   </ul>
                 </div>
               </div>
@@ -75,12 +75,22 @@
             <div class="column" id="projects">
             <header class="intro">
               <h4>Hi there!</h4>
-              <p>I'm Sean, a professional web developer from sunny Brisbane. I champion usability, clarity, and performance. Success is an engaging user experience, a product-market fit, and <span>happy clients</span>.</p>
-              <p><a href="mailto:hello@seanockert.com" title="Email Sean">Recruit a web veteran</a> for your <span>next project.</span></p>
+              <p>I'm Sean, a veteran web developer from sunny Brisbane, with a knack for clarity, blazing performance, and usability.</p>
+              <p>Currently a UX Design Engineer at intelliHR. Need a skilled designer/developer? <a href="mailto:hello@seanockert.com" title="Email Sean Ockert">Let's get in touch</a>.</p>
             </header>
 
             <h2><span>Selected work</span></h2>
             <ul class="no-list">
+              <li>
+                <a href="https://intellihr.gitlab.io/engineering/blueberry/storybook/" title="Visit the Blueberry Design System storybook">
+                  <figure><img src="images/thumb-blueberry.png" alt="Blueberry Design System"></figure>
+                  <div>
+                    <h3>Blueberry Design System</h3>
+                    <p>A library of 60+ React UI components&mdash;plus associated documentation and guidelines&mdash; for building applications <span>at intelliHR.</span></p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
+                </a>
+              </li>
               <li>
                 <a href="https://www.teachstarter.com" title="Visit the Teach Starter website">
                   <figure><img src="images/thumb-teach-starter.jpg" alt="Teach Starter website"></figure>
@@ -188,7 +198,7 @@
               <li><strong>Design</strong> &middot; Sketch, Figma, Photoshop, Illustrator</li>
               <li><strong>Testing</strong> &middot; Jest, Cypress, A/B testing, CI/CD tools</li>
               <li><strong>PHP</strong> &middot; Laravel, CraftCMS, WordPress</li>
-              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS</li>
+              <li><strong>Server-side</strong> &middot; NodeJS, Nginx/Apache, AWS, Serverless</li>
               <li><strong>Ecommerce</strong> &middot; Shopify, Amazon</li>
               <li><strong>Web Graphics</strong> &middot; SVG, Canvas</li>
               <li><strong>Analytics</strong> &middot; Segment, Amplitude, Google Analytics</li>
@@ -213,7 +223,7 @@
           Like what you see? Let's work together<span>.</span>
         </a>
 
-        <footer id="footer">&copy; 2022 Sean Ockert. And all that jazz</footer>
+        <footer id="footer">&copy; 2023 Sean Ockert. And all that jazz</footer>
         </div>
       </div>
 
